--- a/Sockets/WebServer/build.gradle
+++ b/Sockets/WebServer/build.gradle
@@ -1,6 +1,8 @@
 // set as java application
 apply plugin: 'application'
 
+//define main class
+mainClassName = 'WebServer'
 
 task SimpleWebServer(type: JavaExec) {
   group 'http'
